# mdmpy

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  examples.rst  index.rst  installation.rst  mdmpy.rst  modules.rst  overview.rst  references.bib  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  installation.rst  mdmpy.rst  references.bib  src.rst
mdmpy/: __init__.py  mdmpy.py  util.py
src/: __init__.py  mdm.py  mdmpy.py  util.py
src/mdmpy/: mdm.py  util.py
tests/: test_simple.py
